--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <!-- Slide 0: The Hook -->
         <div id="intro" class="slide active">
             <button class="heart-btn" onclick="startJourney()">
-                <div class="heart-icon">💋</div>
+                <div class="heart-icon">🫀</div>
             </button>
             <div class="click-text">Click my heart baby</div>
         </div>
